Fixing horizontal overflow (again)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -513,7 +513,7 @@ header {
     }
 
     .nav {
-        position: absolute;
+        position: fixed;
         z-index: 1;
         background-color: #fff;
         width: 100%;
